spec/e2e/function/default_parameter/invalid.lit
fn existing do |a| it # error: [line 1] Error at "it": Default parameter can't be used when explicit parameters are defined.
existing(1)

fn missing do it
missing() # errfor: [line 5] Runtime error: Expected 1 argument, but got 0.

fn multiline {
  println(it) # error: [line 8] Error at "it": Default parameter can't be used with multi-line blocks.
}
